Add post creation

--- a/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Contacts">Contacts</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="Administration" asp-controller="Posts" asp-action="Create">Create</a>
+                    </li>
                 </ul>
             </div>
         </div>
