--- a/Blog/Web/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@using Blog.Common
+﻿@using System.Globalization
+@using Blog.Web.ViewModels.Posts.ViewModels;
+@model IEnumerable<IndexPostViewModel>;
+
+@using Blog.Common
 @{
     this.ViewData["Title"] = "Home Page";
 }
@@ -22,71 +26,25 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Man must explore, and this is exploration at its greatest
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Problems look mighty small from 150 miles up
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on September 24, 2019
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-                    </h2>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on September 18, 2019
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Science has not yet mastered prophecy
-                    </h2>
-                    <h3 class="post-subtitle">
-                        We predict too much for the next year and yet far too little for the next ten.
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on August 24, 2019
-                </p>
-            </div>
-            <hr>
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Failure is not an option
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-                    </h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on July 8, 2019
-                </p>
-            </div>
-            <hr>
-            <!-- Pager -->
-            <div class="clearfix">
-                <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-            </div>
+            @foreach (var post in this.Model)
+            {
+                <div class="post-preview">
+                    <a asp-area="" asp-controller="Posts" asp-action="Details" asp-route-postId="@post.Id" >
+                        <h2 class="post-title">
+                            @post.Title
+                        </h2>
+                        <h3 class="post-subtitle">
+                           @post.ShortDescription
+                        </h3>
+                    </a>
+                    <p class="post-meta">
+                        Posted by
+                        <a href="#">@post.Author</a>
+                        on @post.CreatedOn.Date.Day @post.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture) @post.CreatedOn.Date.Year
+                    </p>
+                </div>
+                <hr>
+            }
         </div>
     </div>
 </div>
