Add email sender Add tag service Update index page

--- a/Blog/Web/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@using System.Globalization
 @using Blog.Web.ViewModels.Posts.ViewModels;
 @model IEnumerable<IndexPostViewModel>;
-
-@using Blog.Common
 @{
     this.ViewData["Title"] = "Home Page";
 }
@@ -25,16 +23,19 @@
 <!-- Main Content -->
 <div class="container">
     <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-lg-11 col-md-10 mx-auto">
             @foreach (var post in this.Model)
             {
                 <div class="post-preview">
-                    <a asp-area="" asp-controller="Posts" asp-action="Details" asp-route-postId="@post.Id" >
+                    <a asp-area="" asp-controller="Posts" asp-action="Details" asp-route-postId="@post.Id">
                         <h2 class="post-title">
                             @post.Title
                         </h2>
+                        <div class="mt-1 mb-2">
+                            <img src="@post.ImageUrl" class="index-fit-image" />
+                        </div>
                         <h3 class="post-subtitle">
-                           @post.ShortDescription
+                            @post.ShortDescription
                         </h3>
                     </a>
                     <p class="post-meta">
@@ -45,6 +46,14 @@
                 </div>
                 <hr>
             }
+            <div>
+                <a asp-area="" asp-controller="Post" asp-action="All" class="btn btn-primary btn-lg btn-block">Older Posts</a>
+            </div>
+            <hr />
+            <div class="justify-content-lg-between">
+                <h3>Tags</h3>
+                <partial name="_TagPartial" />
+            </div>
         </div>
     </div>
 </div>
