--- a/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
@@ -1,5 +1,10 @@
-﻿ <!-- Page Header -->
-<header class="masthead" style="        background-image: url('https://static1.bigstockphoto.com/4/0/2/large1500/204910300.jpg')
+﻿@using Blog.Web.ViewModels.Emails.InputModels;
+@model SendEmailInputModel;
+@{
+    this.ViewData["Title"] = "Contact Form";
+}
+
+<header class="masthead" style="background-image: url('https://static1.bigstockphoto.com/4/0/2/large1500/204910300.jpg')
 ">
     <div class="overlay"></div>
     <div class="container">
@@ -7,7 +12,6 @@
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="page-heading">
                     <h1>Contact Me</h1>
-                    <span class="subheading">Have questions? I have answers.</span>
                 </div>
             </div>
         </div>
@@ -19,46 +23,69 @@
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-            <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
-            <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-            <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-            <form name="sentMessage" id="contactForm" novalidate>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls">
-                        <label>Name</label>
-                        <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                        <p class="help-block text-danger"></p>
+            <form method="post" id="emailForm">
+            </form>
+                <div class="form-group">
+                    <div class="form-group floating-label-form-group">
+                        <label asp-for="Name"></label>
+                        <input asp-for="Name" id="name" class="form-control" placeholder="Name">
+                        <span asp-validation-for="Name"></span>
                     </div>
                 </div>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls">
-                        <label>Email Address</label>
-                        <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                        <p class="help-block text-danger"></p>
+                <div class="form-group">
+                    <div class="form-group floating-label-form-group">
+                        <label asp-for="Email"></label>
+                        <input asp-for="Email" id="email" class="form-control" placeholder="Email">
+                        <span asp-validation-for="Email"></span>
                     </div>
                 </div>
-                <div class="control-group">
-                    <div class="form-group col-xs-12 floating-label-form-group controls">
-                        <label>Phone Number</label>
-                        <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                        <p class="help-block text-danger"></p>
+                <div class="form-group">
+                    <div class="form-group floating-label-form-group">
+                        <label asp-for="Subject"></label>
+                        <input asp-for="Subject" id="subject" class="form-control" placeholder="Subject">
+                        <span asp-validation-for="Subject"></span>
                     </div>
                 </div>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls">
-                        <label>Message</label>
-                        <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                        <p class="help-block text-danger"></p>
+                <div class="form-group">
+                    <div class="form-group floating-label-form-group">
+                        <label asp-for="Message"></label>
+                        <textarea asp-for="Message" id="message" class="form-control" placeholder="Message"></textarea>
+                        <span asp-validation-for="Message"></span>
                     </div>
                 </div>
                 <br>
-                <div id="success"></div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-                </div>
-            </form>
+            <div class="form-group">
+                <button onclick="sendEmail()" class="btn btn-primary btn-lg btn-block">Send</button>
+            </div>
         </div>
     </div>
 </div>
-
 <hr>
+
+@section Scripts {
+    <script>
+        function sendEmail() {
+            var token = $("#emailForm input[name=__RequestVerificationToken]").val();
+
+            var json =
+            {
+                name: $("#name").val(),
+                email: $("#email").val(),
+                subject: $("#subject").val(),
+                message: $("#message").val()
+            };
+
+            $.ajax({
+                url: '/api/likes',
+                type: "POST",
+                data: JSON.stringify(json),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                headers: { 'X-CSRF-TOKEN': token },
+                success: function (result) {
+                    console.log(result);
+                }
+            });
+        };
+    </script>
+}
