--- a/Blog/Web/Blog.Web/wwwroot/css/site.css
+++ b/Blog/Web/Blog.Web/wwwroot/css/site.css
@@ -54,3 +54,9 @@ body {
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
 }
+.index-fit-image {
+    max-height: 100%;
+    max-width: 100%;
+    align-content: center;
+    overflow: hidden;
+}
