--- a/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-<header class="masthead" style="background-image: url('https://static1.bigstockphoto.com/4/0/2/large1500/204910300.jpg')">
+<header class="masthead" style="background-image: url('@Model.ImageUrl')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -31,7 +31,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-                @Html.Raw(Model.SanitizedContent)
+                <div>
+                    @Html.Raw(Model.SanitizedContent)
+                </div>
             </div>
         </div>
     </div>
