--- a/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Stoyan Shopoff Blog</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand">Stoyan Shopoff Blog</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
@@ -37,17 +37,23 @@
                         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Contacts">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" asp-area="Administration" asp-controller="Posts" asp-action="Create">Create</a>
+                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="About">About Me</a>
                     </li>
+                    @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                    {
+                        <li class="nav-item">
+                            <a class="navbar-brand" asp-area="Administration" asp-controller="Posts" asp-action="Create">Create</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
     </nav>
 
     <div>
-        <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @this.RenderBody()
+            <partial name="_CookieConsentPartial" />
         </main>
     </div>
 
