--- a/Blog/Web/Blog.Web/Views/Shared/_TagPartial.cshtml
+++ b/Blog/Web/Blog.Web/Views/Shared/_TagPartial.cshtml
@@ -7,5 +7,5 @@
 
 @foreach (var tag in TagsService.GetAllTags<TagViewModel>())
 {
-    <a asp-area="" asp-controller="Tags" asp-action="Details" asp-route-tagId="@tag.Id" class="text-white">#@tag.Name</a>
+    <a asp-area="" asp-controller="Tags" asp-action="Details" asp-route-tagId="@tag.Id" class="text-dark">#@tag.Name</a>
 }
