Update index page Update posts all Scaffold Identity - User can log with username Add validation script

--- a/Blog/Web/Blog.Web/Areas/Administration/Views/Categories/Create.cshtml
+++ b/Blog/Web/Blog.Web/Areas/Administration/Views/Categories/Create.cshtml
@@ -28,3 +28,7 @@
         <button type="submit" class="btn btn-primary btn-lg btn-block">Create</button>
     </form>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
