--- a/Blog/Web/Blog.Web/Areas/Administration/Views/Posts/Edit.cshtml
+++ b/Blog/Web/Blog.Web/Areas/Administration/Views/Posts/Edit.cshtml
@@ -66,6 +66,7 @@
 </div>
 
 @section Scripts{
+    <partial name="_ValidationScriptsPartial" />
     <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         tinymce.init({
