--- a/Blog/Web/Blog.Web/Views/Posts/All.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/All.cshtml
@@ -13,7 +13,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
                 <div class="justify-content-lg-between">
-    
+
                 </div>
             </div>
         </div>
@@ -25,38 +25,41 @@
         <div class="row">
             @foreach (var item in Model.Posts)
             {
-                <div class="col-xl-4 mt-3 shadow rounded-lg">
-                    <div>
-                        <a asp-controller="Posts" asp-action="Details" asp-route-postId="@item.Id">
-                            <img src="@item.ImageUrl" class="img-post-all mt-3">
-                        </a>
-                    </div>
-                    <div class="bg-white">
-                        <a asp-controller="Posts" asp-action="Details" asp-route-postId="@item.Id">
-                            <h3 class="h4">@item.Title</h3>
-                        </a>
-                        <div class="text-break">@item.ShortDescription.Substring(0, 50)</div>
-                        <div class="d-flex align-items-center">
-                            <a class="d-flex align-items-center flex-wrap">
-                                <div>
-                                    <img src="@item.Author" class="img-fluid">
-                                </div>
-                                <div>
-                                    <span class="font-weight-bold text-dark">@item.Author</span>
-                                </div>
+                <div class="col-xl-12 mt-3 shadow rounded-lg">
+                    <div class="row">
+                        <div class="col-4">
+                            <a asp-controller="Posts" asp-action="Details" asp-route-postId="@item.Id">
+                                <img src="@item.ImageUrl" class="img-post-all mt-3">
                             </a>
-                            <div class="d-flex align-items-center flex-wrap ml-4">
-                                <div cclass="meta">
-                                    @item.CreatedOn.Date.Day @item.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture) @item.CreatedOn.Date.Year
+                        </div>
+                        <div class="bg-white col-8">
+                            <a asp-controller="Posts" asp-action="Details" asp-route-postId="@item.Id">
+                                <h3 class="h4">@item.Title</h3>
+                            </a>
+                            <div class="text-break">@item.ShortDescription.Substring(0, 150)</div>
+                            <div class="d-flex align-items-center">
+                                <a class="d-flex align-items-center flex-wrap">
+                                    <div>
+                                        <img src="@item.Author" class="img-fluid">
+                                    </div>
+                                    <div>
+                                        <span class="font-weight-bold text-dark">@item.Author</span>
+                                    </div>
+                                </a>
+                                <div class="d-flex align-right flex-wrap ml-4">
+                                    <div cclass="meta">
+                                        @item.CreatedOn.Date.Day @item.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture) @item.CreatedOn.Date.Year
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+            </div>
             }
         </div>
     </div>
 </div>
+
 <div class="mt-4">
     @if (Model.PagesCount > 0)
     {
