--- a/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
+++ b/Blog/Web/Blog.Web/Views/Posts/Details.cshtml
@@ -33,21 +33,25 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div>
-                    @Html.Raw(Model.SanitizedContent)
+                    @Html.Raw(Model.SanitizedContent())
                 </div>
             </div>
         </div>
     </div>
 </article>
 
-<a href="https://www.facebook.com/sharer/sharer.php?u=stoyanshopoff.com/posts/details?postId=@Model.Id" target="_blank">
-    Share on Facebook
-</a>
-<a href="https://www.linkedin.com/sharing/share-offsite/?url=stoyanshopoff.com/posts/details?postId=@Model.Id">
-    Share on LinkedIn
-</a>
+<div class="container text-center mb-3">
+    Share On
+    <a href="https://www.facebook.com/sharer/sharer.php?u=stoyanshopoff.com/posts/details?postId=@Model.Id" class="text-center">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.linkedin.com/sharing/share-offsite/?url=stoyanshopoff.com/posts/details?postId=@Model.Id" class="text-center">
+        <i class="fab fa-linkedin"></i>
+    </a>
+</div>
 
-<h1>Posted by @Model.Tags</h1>
+@*<h1 class="text-center">Tags</h1>
+<h3 class="text-center">@string.Join(", ", Model.Tags)</h3>*@
 
 <div class="text-center">
     @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
