--- a/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog/Web/Blog.Web/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                             <a class="navbar-brand" asp-area="Administration" asp-controller="Posts" asp-action="Create">New Post</a>
                         </li>
                         <li class="nav-item">
-                            <a class="navbar-brand" asp-area="Administration" asp-controller="Posts" asp-action="Create">New Category</a>
+                            <a class="navbar-brand" asp-area="Administration" asp-controller="Categories" asp-action="Create">New Category</a>
                         </li>
                     }
                 </ul>
