Add Tags Controllers/TagsController.cs Update Page Images

--- a/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Contacts.cshtml
@@ -4,8 +4,7 @@
     this.ViewData["Title"] = "Contact Form";
 }
 
-<header class="masthead" style="background-image: url('https://static1.bigstockphoto.com/4/0/2/large1500/204910300.jpg')
-">
+<header class="masthead" style="background-image: url('https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631155/start-page-image_f5qiij.png') ">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
