--- a/Blog/Web/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
                     <h1>Stoyan Shopoff Blog</h1>
-                    <span class="subheading">A Blog for my stories</span>
+                    <span class="subheading">A Blog For My Stories</span>
                 </div>
             </div>
         </div>
@@ -41,15 +41,14 @@
                             </div>
                         </div>
                         <div class="col-6">
-                            <p class="">
+                            <p>
                                 @post.ShortDescription
                             </p>
                         </div>
                     </div>
-
                     <p class="post-meta">
                         Posted by
-                        <a href="#">@post.Author</a>
+                        <a href="#">Stoyan Shopoff</a>
                         on @post.CreatedOn.Date.Day @post.CreatedOn.Date.ToString("MMM", CultureInfo.InvariantCulture) @post.CreatedOn.Date.Year
                     </p>
                 </div>
