--- a/Blog/Web/Blog.Web/Views/Home/About.cshtml
+++ b/Blog/Web/Blog.Web/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 }
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('https://miro.medium.com/max/960/1*PaZT9QBa-Dt9K9FE9-CkbA.jpeg')">
+<header class="masthead" style="background-image: url('https://res.cloudinary.com/dmvrh3bvc/image/upload/v1591631155/artificial-intelligence-future-of-programming_zs5p2r.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
